fixing overflow styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
  #root {
-  width: 100%;
+  width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow-x: hidden;
+  box-sizing: border-box;
 } 
